# chess

./: .gitignore  Cargo.toml  README.md  build.gradle  e.rs
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.space/: devfile.yaml
src/: main.rs  prelude.rs  rng.rs
src/ai/: stockfish.rs
src/board/: bitboard.rs  castling.rs  color.rs  mod.rs  position.rs  square.rs
src/cli/: args.rs
src/core/: board.rs  castle.rs  color.rs  file.rs  hexapawn.rs  mod.rs  piece.rs  piece_move.rs  position.rs  square.rs
src/evaluation/: depth.rs  gametree.rs  material.rs  mod.rs  tables.rs
src/game/: board.rs  chess.rs  game_manager.rs  mod.rs  score_counter.rs
src/grbl/: mod.rs
src/gui/: app.rs  gui_piece.rs  mod.rs
src/main/java/com/thealphareturns/chessai/: ChessAI.java
src/movegen/: mod.rs  non_sliders.rs  pawns.rs  sliders.rs
src/movegen/magic/: generated_lookups.rs  generated_magics.rs  generator.rs  helper.rs  lookup_tables.rs  magic_numbers.rs  mod.rs  stdgen.rs
src/parts/: board.rs  file.rs  mod.rs  position.rs  square.rs
src/pieces/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  piece.rs  queen.rs  rook.rs
src/types/: color.rs  coordinate.rs  etc.rs  file_letter.rs  mod.rs  move.rs  piece.rs  piece_type.rs
src/ui/: board.rs  data.rs  destroy.rs  errors.rs  file.rs  hex_ui.rs  hexapawn.rs  init.rs  mod.rs  parts.rs  promote.rs  root.rs  selection.rs  square.rs  tile.rs  with_size.rs
src/utils/: array2d.rs  counter.rs  ensure.rs  event_emitter.rs  mod.rs  safe_unwrap.rs  string_builder.rs  to_vec.rs  traits.rs  unicode.rs
(+13 files in other folders)
